2.4.55 Clean up SonarLint issues.